--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="src" path="BIT504_Assessment2_Task2/src"/>
 	<classpathentry kind="src" path="expirement_1/src"/>
 	<classpathentry kind="output" path="BIT504_Assessment2_Task2/bin"/>
